deployment/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: springgateway
  name: springgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springgateway
  template:
    metadata:
      labels:
        app: springgateway
    spec:
      containers:
        - image: hrajr25/api-gateway:v0.1
          name: springgateway
          ports:
            - containerPort: 8080
