deployment/springgateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: springgateway
  name: springgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: springgateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: springgateway
    spec:
      containers:
        - image: bramco/brams6gateway
          name: springgateway
          imagePullPolicy: Always
          ports:
            - containerPort: 443
            - containerPort: 80
            - containerPort: 8080
          resources: {}
      hostname: springgateway
      restartPolicy: Always
status: {}
