deployment/gatewayingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-gateway-ingress
spec: 
  rules: 
    - http: 
        paths: 
          - 
            backend: 
              service: 
                name: rabbit
                port: 
                  number: 15672
            path: /
            pathType: Prefix
